@@ -5,6 +5,8 @@ New features:
 
 Bug fixes:
 
+* Fix GitHub Issue #75: Unpredictable crash on delete node via context menu
+
 Other:
 
 1.13.0
